# src/controllers/speakers.ts
@@ -1,6 +1,7 @@
 import { Request, Response, Router } from 'express'
-import { GetData } from 'clients/filesystem'
-import { Speaker } from 'types/speakers'
+import { PrismaClient } from '@prisma/client'
+
+const client = new PrismaClient()
 
 export const speakersRouter = Router()
 speakersRouter.get(`/speakers`, GetSpeakers)
@@ -8,17 +9,20 @@ speakersRouter.get(`/speakers/:id`, GetSpeaker)
 
 async function GetSpeakers(req: Request, res: Response) {
   // #swagger.tags = ['Speakers']
-  const data = GetData<Speaker>('speakers')
+  const data = await client.speaker.findMany()
 
   res.status(200).send({ status: 200, message: '', data })
 }
 
 async function GetSpeaker(req: Request, res: Response) {
   // #swagger.tags = ['Speakers']
-  const data = GetData<Speaker>('speakers')
-  const item = data.find((e) => e.id === req.params.id)
+  const data = await client.speaker.findFirst({
+    where: {
+      OR: [{ id: req.params.id }, { sourceId: req.params.id }],
+    },
+  })
 
-  if (!item) return res.status(404).send({ status: 404, message: 'Not Found' })
+  if (!data) return res.status(404).send({ status: 404, message: 'Not Found' })
 
-  res.status(200).send({ status: 200, message: '', data: item })
+  res.status(200).send({ status: 200, message: '', data: data })
 }
